# wasm-dev-ex

./: .gitmodules  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
docker/: Cargo.toml  Dockerfile  README.md
docker/src/: main.rs
spin/: Cargo.toml  README.md  spin.toml
spin/src/: lib.rs
wasmcloud/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
wasmcloud/keys/: hello_module.nk  rvolosatovs_account.nk
wasmcloud/src/: lib.rs
wasmtime/: Cargo.toml  README.md
wasmtime/wit/: example.wit
